# lab_4

./: .gitignore  CMakeLists.txt  server_main.cpp
core/: CMakeLists.txt
core/p1_test_seidel/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
core/p2_test_sor/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
core/p3_main_seidel/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
core/p4_main_sor/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
core/p5_main_sor/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
frontend/: index.html
shared/: CMakeLists.txt  grid.h  poisson_base.h  utils.h
